# clear-docker-images

./: .dockerignore  .earthlyignore  .gitignore  Cargo.toml  Dockerfile  Earthfile  Makefile  README.md
.github/workflows/: release.yml
src/: date.rs  images.rs  main.rs
