[package]
name = "clear-docker-images"
version = "0.2.0"
edition = "2021"
authors = ["Antoine <DataHearth> Langlois"]
description = "small binary to clean old docker images (mostly in CI)"
repository = "https://github.com/DataHearth/clear-docker-images"
homepage = "https://github.com/DataHearth/clear-docker-images"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"